<resources>
    <string name="app_name">MedTrust</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    login activity -->
    <string name="welcome_back">Welcome Back</string>
    <string name="login_title">Log in to your account to continue</string>
    <string name="patient_btn_text">I\'m a Patient"</string>
    <string name="doctor_btn_text">I\'m a Doctor"</string>
    <string name="log_in_patient">Log In as Patient</string>
    <string name="log_in_doctor">Log In as Doctor</string>
    <string name="do_not_acc">Don\'t have an account?</string>
    <string name="forgot_key">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>

    <!--    patient activity-->

    <string name="log_out">Logout</string>
    <string name="full_name">Full Name \*</string>
    <string name="email">Email \*</string>
    <string name="number">Mobile \*</string>
    <string name="gender">Gender \*</string>
    <string name="date">Date of birth \*</string>
    <string name="status">Status \*</string>
    <string name="full_name_eg">e.g. Var Laisle</string>
    <string name="email_eg">e.g. exampled.com</string>
    <string name="number_eg">e.g. 8133999999</string>
    <string name="date_eg">e.g. 08/12/2008</string>

    <string name="edit_settings">Profile</string>
    <string name="no_doctors_found">No Doctors Found</string>
    <string name="doctor_s_notes">DOCTOR\'S NOTES</string>


</resources>