<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        >

        <!-- Toolbar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/outline_arrow_back_24"
            app:title="Edit Profile"
            app:titleTextColor="@color/lightGreen" />

        <!-- Form -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:id="@+id/editDataContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Name -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/full_name"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/nameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/full_name_eg"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="18dp"
                    android:background="@color/white" />

                <!-- Email -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/email_eg"
                    android:enabled="false"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="18dp"
                    android:background="@color/white" />

                <!-- Number -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/number"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/numberInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/number_eg"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="18dp"
                    android:background="@color/white" />

                <!-- Gender -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/gender"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="Male"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="Female"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/rbOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="Other"
                        android:textColor="@color/white" />

                </RadioGroup>

                <!-- Status -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/rbStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:clickable="false"
                    android:focusable="false">

                    <RadioButton
                        android:id="@+id/rbPatient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Patient"
                        android:clickable="false"
                        android:focusable="false"/>

                    <RadioButton
                        android:id="@+id/rbDoctor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Doctor"
                        android:clickable="false"
                        android:focusable="false"/>
                </RadioGroup>

                <!-- Date -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/dobInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/date_eg"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="18dp"
                    android:background="@color/white" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <!-- Save -->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/lightGreen"
            android:text="Save Changes"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    progress bar -->
    <include android:id="@+id/progressAnim"
        layout="@layout/progress_layout"
        />


</FrameLayout>

