<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    >
    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <!-- Icon -->
        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_login_icon_bg"
            android:padding="12dp"
            android:src="@drawable/baseline_security_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Title -->
        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_back"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgIcon" />

        <!-- Subtitle -->
        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/login_title"
            android:textColor="@color/lightBlack"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <!-- User Type Switch -->
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleUser"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:paddingVertical="1dp"
            android:paddingHorizontal="3dp"
            android:background="@drawable/round_toggle_login_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
            app:singleSelection="true"
            app:selectionRequired="true"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPatient"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="1dp"
                app:cornerRadius="10dp"
                android:text="@string/patient_btn_text"
                android:fontFamily="@font/roboto"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDoctor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cornerRadius="10dp"
                android:text="@string/doctor_btn_text"
                android:fontFamily="@font/roboto"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Email or Username"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxStrokeWidthFocused="1dp"
            app:boxStrokeColor="@color/blue"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:hintTextColor="@color/hint_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggleUser"
            app:startIconDrawable="@drawable/baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/darkBlue"
                android:paddingStart="39dp"
                android:paddingEnd="3dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="Password"
            app:endIconMode="password_toggle"
            app:boxStrokeWidthFocused="1dp"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/etEmailLayout"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="39dp"
                android:paddingEnd="3dp"
                android:textColor="@color/darkBlue"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forgot password -->
        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_key"
            android:fontFamily="@font/roboto"
            android:textColor="@color/blue"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPasswordLayout" />

        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/blue"
            android:text="@string/log_in_patient"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgot" />

        <LinearLayout
            android:id="@+id/llSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Question Text -->
            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_acc"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/roboto"/>

            <!-- Sign Up TextButton -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/sign_up"
                android:textColor="@color/blue"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"
                android:minWidth="0dp"
                android:layout_marginStart="3dp"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

        <include android:id="@+id/progressAnim"
            layout="@layout/progress_layout"
            />

    </FrameLayout>
</androidx.core.widget.NestedScrollView>
